...
//SignIn Page
"email_placeholder"="Email";
"password_placeholder"="Password";
"forgotPassword_button"="Did you forget your password?";
"forgotPassword_navBarTitle"="Recover password";
"signIn_button"="Sign In";
"signUp_button"="Don't you have an account? Sign Up";
"changeLanguage_label"="Choose the language you want:";

//error sign in form alert
"signIn_formError_alert"="Sign In Form Error.";
"signIn_dataError_alert"="Unknown username/password.";
"tryAgian_alert"="Please try again.";

//Sign Up Select Profile Type
"signUp_navBarTitle"="SignUp";
"signUp_sectionHeader"="Choose your profile:";
"player_label"="Player";
"coach_label"="Coach";
"sportDirector_label"="Sport Director";
"team_label"="Team";
"fan_label"="Fan";

//SignUp Detail
"obligatoryField"="obligatory field";
"signUp_name"="Name*";
"signUp_surname"="Surname*";
"signUp_phone"="Phone*";
"signUp_email"="Email*";
"signUp_password"="Password*";
"signUp_repeatPassword"="Repeat Password*";
"signUp_sex"="Sex*";
"signUp_bithdayDate"="Birthday*";
"signUp_nationality"="Nationality*";
"signUp_location"="Location*";
"signUp_favoritePosition"="Favorite Position*";
"signUp_preferredPositions"="Preferred Positions*";
...
"signUp_edit_record"="Edit to add your record";

//back button
"left_button"="Back";

//back alert
"title_back_alert"="Are you sure you want to go back?";
"message_alert"="Going back will clean the register form information";
"yes_alert"="Yes";
"no_alert"="No";

//done button
"right_button"="Done";

//error sign up form alert
"signUp_formError_alert"="Sign Up Form Error!";
"fixIt_alert"="Fix It";

//sign up form errors
"emptyName_error"="Name required!\n";
"invalidName_error"="The name must have between 3 and 18 characters, space allowed!\n";
"emptySurname_error"="Surname required!\n ";
"invalidSurname_error"="The surnename must have between 3 and 18 characters, space allowed!\n";
...
