...

    }
    
    //Back button navigationbar
    private func createLeftButton() {
        self.navigationItem.hidesBackButton = true
        let imageName = "backButton"
        let image = UIImage(named: imageName)
        let newLeftBarButtonItem = UIBarButtonItem(image: image, style: .plain, target: self, action: #selector(SignUpDetailTableViewController.leftTapped(sender:)))
        newLeftBarButtonItem.tintColor = UIColor.colorText
        self.navigationItem.leftBarButtonItem = newLeftBarButtonItem
    }
    
...
        alert.addAction(UIAlertAction(title: alertNoTitle, style: .cancel, handler: nil))
        self.present(alert, animated: true)
    }
    
    //Next button navigationbar
    private func createRightButton() {
        let imageName = "checkButton"
        let image = UIImage(named: imageName)
        let newRightBarButtonItem = UIBarButtonItem(image: image, style: .plain, target: self, action: #selector(SignUpDetailTableViewController.rightTapped(sender:)))
        newRightBarButtonItem.tintColor = UIColor.colorText
        self.navigationItem.rightBarButtonItem = newRightBarButtonItem
    }
    
...
