//
//  SignUpUITests.swift
//  FootNetUITests
//
//  Created by Anan Sadiya on 28/03/2019.
//  Copyright © 2019 FootNet. All rights reserved.
//

import XCTest
@testable import FootNet

class SignUpUITests: XCTestCase {
    private var app: XCUIApplication!
    
    override func setUp() {
        super.setUp()
        continueAfterFailure = false
        app = XCUIApplication()
        app.launchArguments = [
            "-inUITest",
            "-AppleLanguages",
            "(en)",
            "-AppleLocale",
            "en_US"
        ]
        app.launch()
    }
    
    override func tearDown() {
        super.tearDown()
    }
    
    func testBackButton() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        app.navigationBars["SignUp"].buttons["backButton"].tap()
    }
    
    func testSelectProfileType() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        let backbuttonButton = app.navigationBars["SignUp"].buttons["backButton"]
        let areYouSureYouWantToGoBackAlert = app.alerts["Are you sure you want to go back?"]
        let noButton = areYouSureYouWantToGoBackAlert.buttons["No"]
        let yesButton = areYouSureYouWantToGoBackAlert.buttons["Yes"]
        tablesQuery.staticTexts["Player"].tap()
        backbuttonButton.tap()
        noButton.tap()
        backbuttonButton.tap()
        yesButton.tap()
        tablesQuery.staticTexts["Coach"].tap()
        backbuttonButton.tap()
        noButton.tap()
        backbuttonButton.tap()
        yesButton.tap()
        tablesQuery.staticTexts["Sport Director"].tap()
        backbuttonButton.tap()
        noButton.tap()
        backbuttonButton.tap()
        yesButton.tap()
        tablesQuery.staticTexts["Team"].tap()
        backbuttonButton.tap()
        noButton.tap()
        backbuttonButton.tap()
        yesButton.tap()
        tablesQuery.staticTexts["Fan"].tap()
        backbuttonButton.tap()
        noButton.tap()
        backbuttonButton.tap()
        yesButton.tap()
    }
    
    func testSignUpFormCase1() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = self.app.tables
        tablesQuery.staticTexts["Player"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase2() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase3() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase4() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Team"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["F"].tap()
        app.keys["c"].tap()
        app.keys["b"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase5() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase6() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase7() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase8() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.keys["5"].tap()
        app.keys["6"].tap()
        app.keys["7"].tap()
        app.keys["8"].tap()
        app.keys["9"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase9() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase10() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["s"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["@"].tap()
        app.keys["g"].tap()
        app.keys["m"].tap()
        app.keys["a"].tap()
        app.keys["i"].tap()
        app.keys["l"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase11() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["s"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["@"].tap()
        app.keys["g"].tap()
        app.keys["m"].tap()
        app.keys["a"].tap()
        app.keys["i"].tap()
        app.keys["l"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        tablesQuery.secureTextFields["Password*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase12() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["s"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["@"].tap()
        app.keys["g"].tap()
        app.keys["m"].tap()
        app.keys["a"].tap()
        app.keys["i"].tap()
        app.keys["l"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        tablesQuery.secureTextFields["Password*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase13() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["s"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["@"].tap()
        app.keys["g"].tap()
        app.keys["m"].tap()
        app.keys["a"].tap()
        app.keys["i"].tap()
        app.keys["l"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        tablesQuery.secureTextFields["Password*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.keys["more"].tap()
        tablesQuery.secureTextFields["Repeat Password*"].tap()
        sleep(1)
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["more"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase14() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["s"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["@"].tap()
        app.keys["g"].tap()
        app.keys["m"].tap()
        app.keys["a"].tap()
        app.keys["i"].tap()
        app.keys["l"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        tablesQuery.secureTextFields["Password*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.keys["more"].tap()
        tablesQuery.secureTextFields["Repeat Password*"].tap()
        sleep(1)
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase15() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["s"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["@"].tap()
        app.keys["g"].tap()
        app.keys["m"].tap()
        app.keys["a"].tap()
        app.keys["i"].tap()
        app.keys["l"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        tablesQuery.secureTextFields["Password*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.keys["more"].tap()
        tablesQuery.secureTextFields["Repeat Password*"].tap()
        sleep(1)
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.buttons["Return"].tap()
        app.navigationBars["SignUp"].buttons["checkButton"].tap()
        app.alerts["Sign Up Form Error!"].buttons["Fix It"].tap()
    }
    
    func testSignUpFormCase16() {
        app.buttons["Don't you have an account? Sign Up"].tap()
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Player"].tap()
        tablesQuery.textFields["Name*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        tablesQuery.textFields["Surname*"].tap()
        app.buttons["shift"].tap()
        app.keys["S"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        tablesQuery.textFields["Phone*"].tap()
        app.keys["6"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["2"].tap()
        app.keys["4"].tap()
        app.keys["3"].tap()
        app.keys["1"].tap()
        app.keys["8"].tap()
        tablesQuery.textFields["Email*"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["s"].tap()
        app.keys["a"].tap()
        app.keys["d"].tap()
        app.keys["i"].tap()
        app.keys["y"].tap()
        app.keys["a"].tap()
        app.keys["@"].tap()
        app.keys["g"].tap()
        app.keys["m"].tap()
        app.keys["a"].tap()
        app.keys["i"].tap()
        app.keys["l"].tap()
        app.keys["."].tap()
        app.keys["c"].tap()
        app.keys["o"].tap()
        app.keys["m"].tap()
        tablesQuery.secureTextFields["Password*"].tap()
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.keys["more"].tap()
        tablesQuery.secureTextFields["Repeat Password*"].tap()
        sleep(1)
        app.buttons["shift"].tap()
        app.keys["A"].tap()
        app.keys["n"].tap()
        app.keys["a"].tap()
        app.keys["n"].tap()
        app.keys["more"].tap()
        app.keys["1"].tap()
        app.keys["2"].tap()
        app.keys["3"].tap()
        app.keys["4"].tap()
        app.buttons["Return"].tap()
